fixes feed alignment on safari

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -15,6 +15,7 @@
   flex-flow row wrap
 
 .grid.grid--feed
+  -webkit-justify-content center
   justify-content center
 
 .grid__block
